2003-03-17  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3199105 - Accept carbon-style file URLs from plug-in POST requests
	Fixed: 3148767 - POST (aka Flash Remoting) doesn't work from Flash

        Reviewed by kocienda.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView _postURLNotify:target:len:buf:file:notifyData:allowHeaders:]): parse headers, handle carbon POSIX paths
        (-[WebBaseNetscapePluginView postURLNotify:target:len:buf:file:notifyData:]): call _postURLNotify
        (-[WebBaseNetscapePluginView postURL:target:len:buf:file:]): call _postURLNotify
        (-[NSData startsWithBlankLine]): new
        (-[NSData locationAfterFirstBlankLine]): new

2003-03-17  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- fixed 3200259 - REGRESSION: Clicking on Flash links at homestarrunner.com creates blank windows

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView loadPluginRequest:]): Don't always
	make the window, only do it if the frame doesn't already
	exist. Duh.

2003-03-17  Darin Adler  <darin@apple.com>

        Reviewed by Trey and Maciej.

	- fixed 3199154 -- REGRESSION: world leaks on any page load test

        * WebView.subproj/WebController.m: (-[WebController initWithView:frameName:groupName:]):
        Call through to initWithFrame, the designated initializer, not init. Calling [super init] results
        in calling our initWithFrame method, resulting in two calls to the _commonInitialization method.

2003-03-17  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Trey.

	Adjusted for WebFoundation API changes.
	
        * Panels.subproj/WebAuthenticationPanel.m:
        (-[WebAuthenticationPanel setUpForRequest:]):

2003-03-17  Darin Adler  <darin@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Update for recent changes.

2003-03-17  Chris Blumenberg  <cblu@apple.com>
